# Claude-BugHunter

./: .gitattributes  .gitignore  INSTALL.md  README.md  SECURITY.md  USAGE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: dx_feedback.yml
cbh/: __init__.py  cli.py
cbh/data/: skill_index.json
commands/: hunt.md  intel.md  scope.md  surface.md  token-scan.md
docs/: architecture.md  cbh-cli.md  credits.md  recon-manifest.md  recon-manifest.schema.json  skills.md
engine/: scope.py
scripts/: cbh.py  gen_skill_index.py  hunt.sh  install-community-skills.sh  install.sh
skills/bb-local-toolkit/: SKILL.md
skills/bugcrowd-reporting/: SKILL.md
skills/cloud-iam-deep/: SKILL.md
skills/evidence-hygiene/: SKILL.md
skills/hunt-api-misconfig/: SKILL.md
skills/hunt-ato/: SKILL.md
skills/hunt-auth-bypass/: SKILL.md
skills/hunt-business-logic/: SKILL.md
skills/hunt-cache-poison/: SKILL.md
skills/hunt-cache-poisoning/: SKILL.md
skills/hunt-cicd/: SKILL.md
skills/hunt-cloud-misconfig/: SKILL.md
skills/hunt-csrf/: SKILL.md
skills/hunt-deserialization/: SKILL.md
skills/hunt-dom/: SKILL.md
skills/hunt-file-upload/: SKILL.md
skills/hunt-graphql/: SKILL.md
skills/hunt-http-smuggling/: SKILL.md
skills/hunt-idor/: SKILL.md
skills/hunt-llm-ai/: SKILL.md
skills/hunt-mfa-bypass/: SKILL.md
skills/hunt-misc/: SKILL.md
skills/hunt-oauth/: SKILL.md
skills/hunt-race/: SKILL.md
skills/hunt-race-condition/: SKILL.md
skills/hunt-rce/: SKILL.md
skills/hunt-saml/: SKILL.md
skills/hunt-sqli/: SKILL.md
skills/hunt-ssrf/: SKILL.md
(+10 files in other folders)
